[package]
name = "fake_lola"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bifrost = { path = "../yggdrasil/crates/bifrost/" }
rmp-serde = { version = "1.1.1" }
serde = { version = "1.0.150", features = ["derive"] }
